bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: productpage-gateway
  namespace: bookretail-istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE # For TLS only use SIMPLE, for mTLS use MUTUAL
      credentialName: productpage-credential
    hosts:
    - 'productpage.apps.cluster-5998.5998.sandbox1668.opentlc.com'
