bookinfo-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  hosts:
  - details.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9080
        host: details.bookinfo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo
spec:
  hosts:
  - productpage.apps.cluster-5998.5998.sandbox1668.opentlc.com
  gateways:
  - bookretail-istio-system/productpage-gateway
  http:
  - route:
    - destination:
        port:
          number: 9080
        host: productpage.bookinfo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: bookinfo
spec:
  hosts:
  - ratings.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9080
        host: ratings.bookinfo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
  - reviews.bookinfo.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9080        
        host: reviews.bookinfo.svc.cluster.local
        subset: v1
      weight: 33
    - destination:
        port:
          number: 9080
        host: reviews.bookinfo.svc.cluster.local
        subset: v2
      weight: 33
    - destination:
        port:
          number: 9080
        host: reviews.bookinfo.svc.cluster.local
        subset: v3
      weight: 34
